# projects_bin

dsa/: hanoi.py
scratch/: UYQK.ipynb  hello.ipynb
sharks/: global-shark-attack.csv  sharks_analysis.ipynb  sharks_analysis.py  sharks_streamlit.py
surfleague/: pyproject.toml  surfleague.ipynb
surfleague/surfleague/spiders/: profiles.csv  profiles.py  profiles1.csv  profiles_updated.csv  surf.csv  surf1.csv  surf_scores.csv  surfingspider.csv  surfingspider.py
