[tool.poetry]
name = "surfleague"
version = "0.1.0"
description = ""
authors = ["Tristan New <tristannew@ymail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.1"
Scrapy = "^2.9.0"
numpy = "^1.24.3"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
